--- a/templates/login.html
+++ b/templates/login.html
@@ -248,7 +248,7 @@
         </form>
 
         <div class="footer">
-            Copyright © 2026 资产评估有限公司 <br> All rights reserved.
+            Copyright © 2026 中和金乾资产评估有限公司 临时版本2.0 <br> All rights reserved.
         </div>
     </div>
 </body>
